--- a/gb/19/12/18/n11729704.md
+++ b/gb/19/12/18/n11729704.md
@@ -1,57 +1,63 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kjeqw2335/djy/blob/master/gb/9p.md#1">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/kjeqw2335/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/kjeqw2335/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/kjeqw2335/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/kjeqw2335/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ</a> | <a target="_blank" href="https://github.com/kjeqw2335/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/kjeqw2335/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/kjeqw2335/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/kjeqw2335/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/kjeqw2335/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/kjeqw2335/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/kjeqw2335/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/kjeqw2335/www/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/kjeqw2335/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/kjeqw2335/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/kjeqw2335/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/kjeqw2335/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/kjeqw2335/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/kjeqw2335/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/kjeqw2335/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/kjeqw2335/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/kjeqw2335/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/kjeqw2335/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/kjeqw2335/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/kjeqw2335/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/kjeqw2335/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/kjeqw2335/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>°²ÀÖËÀÔÚÎ÷°ÄºÏ·¨»¯</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2018/06/oxygen.jpg" />
-<h6>Ò½ÉúÐ­Öú¾øÖ¢»¼Õß½áÊøÉúÃü£¬ÓÖ³Æ¡°°²ÀÖËÀ¡±¡£×ÔÍÆ³öÒÔÀ´£¬ÔÚÈ«Çò·¶Î§Òý·¢¾Þ´óÕùÒé¡££¨Shutterstock£©
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/vuwsmg331/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒé¦–é¡µ" alt="å¤§çºªå…ƒé¦–é¡µ"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»" alt="å›½é™…æ–°é—»"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»" alt="å¤§é™†æ–°é—»"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/5.jpg" title="å¤§çºªå…ƒè¯„è®º" alt="å¤§çºªå…ƒè¯„è®º"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/6.jpg" title="ä¼ ç»Ÿæ–‡åŒ–" alt="ä¼ ç»Ÿæ–‡åŒ–"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/7.jpg" title="ç”Ÿæ´»æ¶ˆè´¹" alt="ç”Ÿæ´»æ¶ˆè´¹"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/8.jpg" title="å¨±ä¹ä¼‘é—²" alt="å¨±ä¹ä¼‘é—²"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/9.jpg" title="å¥åº·" alt="å¥åº·"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/10a.jpg" title="ç‹¬å®¶" alt="ç‹¬å®¶"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/12a.jpg" title="å¤´æ¡è¦é—»" alt="å¤´æ¡è¦é—»"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/vuwsmg331/www/blob/master/README.md?zsrh#1">ç¿»å¢™</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/vuwsmg331/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a></p><p><a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/vuwsmg331/www/blob/master/README.md?zsrh#1">å¹³å°é¦–é¡µ</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>å®‰ä¹æ­»åœ¨è¥¿æ¾³åˆæ³•åŒ–</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2018/06/oxygen.jpg" />
+<h6>åŒ»ç”ŸååŠ©ç»ç—‡æ‚£è€…ç»“æŸç”Ÿå‘½ï¼Œåˆç§°â€œå®‰ä¹æ­»â€ã€‚è‡ªæŽ¨å‡ºä»¥æ¥ï¼Œåœ¨å…¨çƒèŒƒå›´å¼•å‘å·¨å¤§äº‰è®®ã€‚ï¼ˆShutterstockï¼‰
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê12ÔÂ18ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕßÅíÄÝ°ÄÖÞçêË¹±àÒë±¨µ¼£©Âó¸ß¶÷Õþ¸®µÄ×ÔÔ¸Ð­ÖúËÀÍöÐÌ·¨ÔÚÖÜ¶þ£¨12ÔÂ10ÈÕ£©ÍíµÄÒé»áÉÏÍ¨¹ý£¬Ê¹<a href="https://github.com/kjeqw2335/djy/blob/master/gb/tag/%E8%A5%BF%E6%BE%B3.md">Î÷°Ä</a>³ÉÎª°ÄÖÞµÚÈý¸ö<a href="https://github.com/kjeqw2335/djy/blob/master/gb/tag/%E5%AE%89%E4%B9%90%E6%AD%BB.md">°²ÀÖËÀ</a>ºÏ·¨»¯µÄµØÇø£¬Ò²ÊÇÊÀ½çÉÏµÚ19¸ö<a href="https://github.com/kjeqw2335/djy/blob/master/gb/tag/%E5%AE%89%E4%B9%90%E6%AD%BB%E5%90%88%E6%B3%95%E5%8C%96.md">°²ÀÖËÀºÏ·¨»¯</a>µÄË¾·¨¹ÜÏ½Çø¡£</p>
-<p>¾Ý½ñÈÕ<a href="https://github.com/kjeqw2335/djy/blob/master/gb/tag/%E8%A5%BF%E6%BE%B3.md">Î÷°Ä</a>Íø±¨µ¼£¬ÎÀÉúÌü³¤¿â¿Ë£¨Roger Cook£©ÓÚÖÜ¶þÏòÁ¢·¨»ú¹¹½éÉÜÁËÉÏÒéÔºµÄ55ÏîÐÞÕý°¸£¬Ëæºó·¨°¸ÔÚÏÂÎç6µãÖ®ºóÍ¨¹ý¡£</p>
-<p>¿â¿ËÇ¿ÈÌÀáË®£¬¸ÐÐ»ËùÓÐ²ÎÓëÖÆ¶¨¸Ã·¨°¸µÄÈË£¬²¢±íÊ¾Î÷°ÄÏÖÔÚÊÇ°ÄÖÞµÚ¶þ¸öÊ¹<a href="https://github.com/kjeqw2335/djy/blob/master/gb/tag/%E5%AE%89%E4%B9%90%E6%AD%BB.md">°²ÀÖËÀ</a>ºÏ·¨»¯¡¢ÊÜÈË×ð¾´µÄË¾·¨¹ÜÏ½Çø£¨±±ÁìµØ¸ÃÏî·¨ÂÉÓÚ1997Äê·ÏÖ¹£©¡£</p>
-<p>¾¡¹ÜÐÂ·¨¹æÔ¤¼ÆÒªµ½2021ÄêÖÐÆÚ²Å»áÉúÐ§£¬µ«ÒÑ¾­ÓÐÈËºôÓõ·Å¿í·¨¹æ£¬ÒÔÔÊÐíÄÇÐ©¡°ÀÍÀÛ²»¿°µÄÈË¡±°´ÕÕÆä¹æ¶¨ËÀÍö¡£</p>
-<p>Ò»µ©ÉúÐ§£¬Î÷°ÄµÄ¡¶×ÔÔ¸Ð­ÖúËÀÍö·¨¡·½«ÔÊÐí»¼ÓÐÔÚ6¸öÔÂÄÚ¼«¿ÉÄÜµ¼ÖÂËÀÍö¼²²¡µÄÈË£¨Éñ¾­ÍË»¯ÐÔ¼²²¡µÄÆÚÏÞÎª12¸öÔÂ£©£¬Ê¹ÓÃÖÂÃüµÄ¡°×ÔÔ¸Ð­ÖúËÀÍöÎïÖÊ¡±À´½áÊøÉúÃü¡£</p>
-<p>ÖÝ³¤Âó¸ß¶÷£¨Mark McGowan£©±íÊ¾£¬¶ÔÎ÷°ÄÀ´Ëµ£¬ÕâÊÇÒ»¸ö¾ßÓÐÀúÊ·ÐÔµÄ¡¢ÖØÒªÇÒÑÏ¾þµÄÈÕ×Ó¡£ËûËµ£º¡°ÕâÒâÎ¶×ÅËùÓÐµ£ÐÄ×Ô¼ºµÄÎ´À´£¬µ£ÐÄ¸¸Ä¸Î´À´µÄÈË¶¼½«ÐÀÎ¿µØÖªµÀ£¬Èç¹ûËûÃÇ¿ìËÀÁË²¢ÇÒÍ´¿à²»¿°£¬ËûÃÇ¿ÉÒÔÖ´ÐÐ×Ô¼ºµÄÑ¡Ôñ¡£¡±</p>
-<p>Á¢·¨²Ý°¸ÉÏÖÜÔÚÁ¢·¨»ú¹¹µÄÉÏÔº±»ÐÞÕýÁË55ÏîºóÍ¨¹ý¡£?Î¬¶àÀûÑÇÖÝÓÚ2017ÄêÍ¨¹ýÁËÀàËÆ·¨°¸£¬Ê×ÀýËÀÍöÓÚ8ÔÂ·¢Éú¡£</p>
-<p>Î÷°Ä·¨ÂÉ½çµÄÅúÆÀÕß±íÊ¾£¬ÕâÊÇ°ÄÖÞÁ¢·¨»ú¹¹ÖÆ¶¨µÄ×î²»°²È«µÄ°²ÀÖËÀÖÆ¶È¡£ÖøÃûµÄ·´°²ÀÖËÀ¹ú»áÒéÔ±¹ÅÀ¼£¨Nick Goiran£©Ëµ£º¡°¿ÉÒÔ¿Ï¶¨µÄÊÇ£¬ÕâÊÇÓÐÊ·ÒÔÀ´×îÎ£ÏÕµÄÁ¢·¨¡£¡±Ëû±íÊ¾·¨°¸Ã»ÓÐÒªÇóÒ½Ñ§×¨¼Ò»ò¾«Éñ²¡Ò½Éú²ÎÓë×ÔÔ¸Ð­ÖúËÀÍöµÄ¹ý³Ì£¬²¢ÇÒÎÞÐë¼à¶½±ã¿ÉÏò»¼Õß¿ª³öÖÂÃüÐÔÒ©Îï¡£</p>
-<p>¹ÅÀ¼¾¯¸æËµ£¬ÓÉ´Ë½«²»¿É±ÜÃâµÄÒý·¢ÕþÖÎ¾ºÑ¡ÕßÊÔÍ¼½«·¨ÂÉÀ©Õ¹µ½ÄÇÐ©Ô­±¾²»·ûºÏ×Ê¸ñµÄÈË¡£</p>
-<p>Ëû±íÊ¾ÆäËüË¾·¨¹ÜÏ½ÇøÒÑ¾­¸Ä±äÁËËûÃÇÊµÊ©°²ÀÖËÀ·¨ÂÉµÄ·½Ê½£¬´Ó¶ø¡°ÔÊÐí¸ü¶àÀà±ðµÄÈË£»Ïñ»¼ÓÐ¾«Éñ¼²²¡µÄÈË¡¢¶ùÍ¯£¬ÒÔ¼°ÏÖÔÚÒý·¢ÕùÂÛµÄ±»ÐÎÈÝÎª¡®Ñá¾ëÁËÉú»îµÄÈË¡¯¡±¡£</p>
+	<p>ã€å¤§çºªå…ƒ2019å¹´12æœˆ18æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…å½­å¦®æ¾³æ´²ç€æ–¯ç¼–è¯‘æŠ¥å¯¼ï¼‰éº¦é«˜æ©æ”¿åºœçš„è‡ªæ„¿ååŠ©æ­»äº¡åˆ‘æ³•åœ¨å‘¨äºŒï¼ˆ12æœˆ10æ—¥ï¼‰æ™šçš„è®®ä¼šä¸Šé€šè¿‡ï¼Œä½¿<ahref="https://github.com/vuwsmg331/djy/blob/master/gb/tag/%E8%A5%BF%E6%BE%B3.md#1">è¥¿æ¾³</a>æˆä¸ºæ¾³æ´²ç¬¬ä¸‰ä¸ª<ahref="https://github.com/vuwsmg331/djy/blob/master/gb/tag/%E5%AE%89%E4%B9%90%E6%AD%BB.md#1">å®‰ä¹æ­»</a>åˆæ³•åŒ–çš„åœ°åŒºï¼Œä¹Ÿæ˜¯ä¸–ç•Œä¸Šç¬¬19ä¸ª<ahref="https://github.com/vuwsmg331/djy/blob/master/gb/tag/%E5%AE%89%E4%B9%90%E6%AD%BB%E5%90%88%E6%B3%95%E5%8C%96.md#1">å®‰ä¹æ­»åˆæ³•åŒ–</a>çš„å¸æ³•ç®¡è¾–åŒºã€‚</p>
+<p>æ®ä»Šæ—¥<ahref="https://github.com/vuwsmg331/djy/blob/master/gb/tag/%E8%A5%BF%E6%BE%B3.md#1">è¥¿æ¾³</a>ç½‘æŠ¥å¯¼ï¼Œå«ç”ŸåŽ…é•¿åº“å…‹ï¼ˆRoger Cookï¼‰äºŽå‘¨äºŒå‘ç«‹æ³•æœºæž„ä»‹ç»äº†ä¸Šè®®é™¢çš„55é¡¹ä¿®æ­£æ¡ˆï¼ŒéšåŽæ³•æ¡ˆåœ¨ä¸‹åˆ6ç‚¹ä¹‹åŽé€šè¿‡ã€‚</p>
+<p>åº“å…‹å¼ºå¿æ³ªæ°´ï¼Œæ„Ÿè°¢æ‰€æœ‰å‚ä¸Žåˆ¶å®šè¯¥æ³•æ¡ˆçš„äººï¼Œå¹¶è¡¨ç¤ºè¥¿æ¾³çŽ°åœ¨æ˜¯æ¾³æ´²ç¬¬äºŒä¸ªä½¿<ahref="https://github.com/vuwsmg331/djy/blob/master/gb/tag/%E5%AE%89%E4%B9%90%E6%AD%BB.md#1">å®‰ä¹æ­»</a>åˆæ³•åŒ–ã€å—äººå°Šæ•¬çš„å¸æ³•ç®¡è¾–åŒºï¼ˆåŒ—é¢†åœ°è¯¥é¡¹æ³•å¾‹äºŽ1997å¹´åºŸæ­¢ï¼‰ã€‚</p>
+<p>å°½ç®¡æ–°æ³•è§„é¢„è®¡è¦åˆ°2021å¹´ä¸­æœŸæ‰ä¼šç”Ÿæ•ˆï¼Œä½†å·²ç»æœ‰äººå‘¼åæ”¾å®½æ³•è§„ï¼Œä»¥å…è®¸é‚£äº›â€œåŠ³ç´¯ä¸å ªçš„äººâ€æŒ‰ç…§å…¶è§„å®šæ­»äº¡ã€‚</p>
+<p>ä¸€æ—¦ç”Ÿæ•ˆï¼Œè¥¿æ¾³çš„ã€Šè‡ªæ„¿ååŠ©æ­»äº¡æ³•ã€‹å°†å…è®¸æ‚£æœ‰åœ¨6ä¸ªæœˆå†…æžå¯èƒ½å¯¼è‡´æ­»äº¡ç–¾ç—…çš„äººï¼ˆç¥žç»é€€åŒ–æ€§ç–¾ç—…çš„æœŸé™ä¸º12ä¸ªæœˆï¼‰ï¼Œä½¿ç”¨è‡´å‘½çš„â€œè‡ªæ„¿ååŠ©æ­»äº¡ç‰©è´¨â€æ¥ç»“æŸç”Ÿå‘½ã€‚</p>
+<p>å·žé•¿éº¦é«˜æ©ï¼ˆMark McGowanï¼‰è¡¨ç¤ºï¼Œå¯¹è¥¿æ¾³æ¥è¯´ï¼Œè¿™æ˜¯ä¸€ä¸ªå…·æœ‰åŽ†å²æ€§çš„ã€é‡è¦ä¸”ä¸¥å³»çš„æ—¥å­ã€‚ä»–è¯´ï¼šâ€œè¿™æ„å‘³ç€æ‰€æœ‰æ‹…å¿ƒè‡ªå·±çš„æœªæ¥ï¼Œæ‹…å¿ƒçˆ¶æ¯æœªæ¥çš„äººéƒ½å°†æ¬£æ…°åœ°çŸ¥é“ï¼Œå¦‚æžœä»–ä»¬å¿«æ­»äº†å¹¶ä¸”ç—›è‹¦ä¸å ªï¼Œä»–ä»¬å¯ä»¥æ‰§è¡Œè‡ªå·±çš„é€‰æ‹©ã€‚â€</p>
+<p>ç«‹æ³•è‰æ¡ˆä¸Šå‘¨åœ¨ç«‹æ³•æœºæž„çš„ä¸Šé™¢è¢«ä¿®æ­£äº†55é¡¹åŽé€šè¿‡ã€‚?ç»´å¤šåˆ©äºšå·žäºŽ2017å¹´é€šè¿‡äº†ç±»ä¼¼æ³•æ¡ˆï¼Œé¦–ä¾‹æ­»äº¡äºŽ8æœˆå‘ç”Ÿã€‚</p>
+<p>è¥¿æ¾³æ³•å¾‹ç•Œçš„æ‰¹è¯„è€…è¡¨ç¤ºï¼Œè¿™æ˜¯æ¾³æ´²ç«‹æ³•æœºæž„åˆ¶å®šçš„æœ€ä¸å®‰å…¨çš„å®‰ä¹æ­»åˆ¶åº¦ã€‚è‘—åçš„åå®‰ä¹æ­»å›½ä¼šè®®å‘˜å¤å…°ï¼ˆNick Goiranï¼‰è¯´ï¼šâ€œå¯ä»¥è‚¯å®šçš„æ˜¯ï¼Œè¿™æ˜¯æœ‰å²ä»¥æ¥æœ€å±é™©çš„ç«‹æ³•ã€‚â€ä»–è¡¨ç¤ºæ³•æ¡ˆæ²¡æœ‰è¦æ±‚åŒ»å­¦ä¸“å®¶æˆ–ç²¾ç¥žç—…åŒ»ç”Ÿå‚ä¸Žè‡ªæ„¿ååŠ©æ­»äº¡çš„è¿‡ç¨‹ï¼Œå¹¶ä¸”æ— é¡»ç›‘ç£ä¾¿å¯å‘æ‚£è€…å¼€å‡ºè‡´å‘½æ€§è¯ç‰©ã€‚</p>
+<p>å¤å…°è­¦å‘Šè¯´ï¼Œç”±æ­¤å°†ä¸å¯é¿å…çš„å¼•å‘æ”¿æ²»ç«žé€‰è€…è¯•å›¾å°†æ³•å¾‹æ‰©å±•åˆ°é‚£äº›åŽŸæœ¬ä¸ç¬¦åˆèµ„æ ¼çš„äººã€‚</p>
+<p>ä»–è¡¨ç¤ºå…¶å®ƒå¸æ³•ç®¡è¾–åŒºå·²ç»æ”¹å˜äº†ä»–ä»¬å®žæ–½å®‰ä¹æ­»æ³•å¾‹çš„æ–¹å¼ï¼Œä»Žè€Œâ€œå…è®¸æ›´å¤šç±»åˆ«çš„äººï¼›åƒæ‚£æœ‰ç²¾ç¥žç–¾ç—…çš„äººã€å„¿ç«¥ï¼Œä»¥åŠçŽ°åœ¨å¼•å‘äº‰è®ºçš„è¢«å½¢å®¹ä¸ºâ€˜åŽŒå€¦äº†ç”Ÿæ´»çš„äººâ€™â€ã€‚</p>
 <p>&nbsp;</p>
-<p>ÔðÈÎ±à¼­£º¸ßÃô</p>
-
+<p>è´£ä»»ç¼–è¾‘ï¼šé«˜æ•</p>
+	
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/12/18/n11729704.htm">°²ÀÖËÀÔÚÎ÷°ÄºÏ·¨»¯</a>
 
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/11/18/n11662237.htm">Î÷°ÄÁª°îÒéÔ±¹þË¹µÙÖ¸ÔðÂó¸ß¶÷ÌÖºÃ±±¾©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/6/n11504170.htm">Î÷°ÄÃñÖÚ¼¯»á ºôÓõÕþ¸®ÔÝÍ£°²ÀÖËÀÁ¢·¨</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/8/n11440120.htm">Î÷°Ä»òÒý½ø°²ÀÖËÀ·¨ ÏÈ±çÂÛÈýÖÜ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/7/n11239470.htm">Ò»±£ÊØ»ù¶½½ÌÍÅÌå¼¯»áµÖÖÆ¹¤µ³ºòÑ¡ÈËÈëÑ¡</a></li>
-> <li><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/9/6/n11504170.md">Î÷°ÄÃñÖÚ¼¯»á ºôÓõÕþ¸®ÔÝÍ£°²ÀÖËÀÁ¢·¨</a></li>
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/12/17/n11727147.htm">¡¾·­Ç½±Ø¿´¡¿PCC¹ÍÓÃ±¡¹Ï¹Ï¡°ÁîÈË³Ô¾ª¡±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/17/n11728507.htm">¡¾ÐÂÎÅ¿´µã¡¿Ï°·Ã°ÄÐû²¼ÐÂÕþ£¿»ÝÓþ½µ°ÄÆÀ¼¶</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/17/n11727486.htm">¡¶»·ÇòÊ±±¨¡·ÐÂÃ½Ìå²¿Ö÷ÈÎ×ÔÆØ ±»¾Ü·¢ÃÀÇ©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/17/n11728275.htm">´óÂíÇ°×ÜÀí¾íÈëÐÂ°¸ ÉæÏÂÁîÄ±É±ÃÉ¹ÅÄ£ÌØ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/8/n11708625.htm">¡¾ÃüÀí¡¿ÃÏÆÅÌÀÕæÓÐÆäÊÂ ¼ÇµÃÇ°ÊÀÅ®×ÓÊµÖ¤</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/12/n11719072.htm">¸¸Ç×Ò»»­Áú ÌìÉÏ¾ÍÎÚÔÆÃÜ²¼</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/5/n11703763.htm">Ãð·ð½Ì ±±ÖÜÎäµÛËÀºóÉíÏÝµØÓüÄÑÍÑ¿àº£</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/6/n11706278.htm">½Ò¿ª°×Éß´«µÄ°®ÇéÃæÉ´£º·¨º£Ô­Îª³ýÑý¸ßÉ®</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/16/n11726617.htm">ÖÐ¹²×ßÍ¶ÎÞÂ· ¾ü¶ÓÑºËÍ¡°ÖÐÃÀÐ­Òé¡±¹ý¹Ø</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/16/n11726641.htm">±¡ÎõÀ´Ö®×Ó±¡¹Ï¹Ï ×îÐÂÐÐ×ÙÆØ¹â</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/16/n11726553.htm">Ï°½üÆ½ºÍÀî¿ËÇ¿¼ûÁÖÖ£ ³öÏÖÈý´ó±ä»¯</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/17/n11728835.htm">¡¾ÈÈµã»¥¶¯¡¿Õ®ÎñÎ£»úÏÂ ÖÐ¹ú½ðÈÚ·çÏÕ¶à¸ß£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/17/n11727211.htm">¡¾ÅÄ°¸¾ªÆæ¡¿¸Û°ÄÖéÇÅÉÏµÄÃØÐÁ Ï°½üÆ½·Ã°ÄÃÅ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/9/n11711287.htm">¡¾ÂÞ³øÑ°Î¶¡¿¶«ÆÂÈâ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/16/n11726623.htm">Äâ¸ß¼ÛÂòÏÂ¸ßÒÔÏèÒÅ×÷ Õã½­ÎÀÊÓÔâ¾ç×÷·½¾Ü¾ø</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/17/n11728888.htm">ÕÔÞ±ÁãÂË¾µ´óÌØÐ´ÆØ¹â ÍøÃñÖ±ºô¿´ÉµÑÛ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/15/n11724254.htm">ÒÕÈË¶ÅãëÔó¼ÄÓï£ºÏã¸ÛµÄÎ´À´ÊôÓÚÄêÇáÈË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/16/n11726430.htm">ºÎÔÏÊ«ÁÖ´ÏºÏ³ªÐÂ¸è ¡¶Ò¹ÐÐ¡·ÃãÀø¸ÛÈË²»·ÅÆú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/15/n11724306.htm">´óÂí·ÛË¿³¬ÈÈÇé¸Ð¶¯EXO Ô¼¶¨±Ø¶¨ÔÙÀ´</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/19/5/7/n11239470.md#1">ä¸€ä¿å®ˆåŸºç£æ•™å›¢ä½“é›†ä¼šæŠµåˆ¶å·¥å…šå€™é€‰äººå…¥é€‰</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/19/8/8/n11440120.md#1">è¥¿æ¾³æˆ–å¼•è¿›å®‰ä¹æ­»æ³• å…ˆè¾©è®ºä¸‰å‘¨</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/19/9/6/n11504170.md#1">è¥¿æ¾³æ°‘ä¼—é›†ä¼š å‘¼åæ”¿åºœæš‚åœå®‰ä¹æ­»ç«‹æ³•</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/19/11/18/n11662237.md#1">è¥¿æ¾³è”é‚¦è®®å‘˜å“ˆæ–¯è’‚æŒ‡è´£éº¦é«˜æ©è®¨å¥½åŒ—äº¬</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kjeqw2335/djy/blob/master/gb/19/12/18/n11729704.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/kjeqw2335/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/kjeqw2335/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/kjeqw2335/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/26/n10513103.md#1" target="_blank">å”é“­ï¼šç»´æƒè€å…µéœ€äº†è§£éŸ©æˆ˜çš„ä¸­å›½æˆ˜ä¿˜åˆºé’æµªæ½®</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/21/n11400032.md#1" target="_blank">æ¾³ç«‹æ³•ä¼šè®®å‘˜ï¼šå…¬å¼€ç›´æŽ¥åˆ¶æ­¢ä¸­å…±è¿«å®³æ³•è½®åŠŸ</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/16/n13238162.md#1">ç¾Žå›½ç”·å­è‡ªç§°é­å¤–æ˜Ÿäººå¤šæ¬¡ç»‘æž¶å’Œæ¤å…¥æ™¶ç‰‡</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/10/n13225261.md#1">ã€æœªè§£ä¹‹è°œã€‘è½°åŠ¨æ—¥æœ¬ ç”²åºœUFOäº‹ä»¶</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/15/n13237143.md#1">ã€ç™¾å¹´çœŸç›¸ã€‘æœ€æƒ¨æµ·å½’åšå£« è§å…‰ç°æ–‡é©é­ç­é—¨</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/6/n13213473.md#1">å¤ä»Šä¸¤ä¸ªä¸­ç§‹ç¤¼ä¿—å„å¼‚ å¤ä»£ä¸é€æœˆé¥¼ æœˆé¥¼ä½•æ—¶æ™®åŠï¼Ÿ</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/14/n13233994.md#1">ã€æœªè§£ä¹‹è°œã€‘å‰ä¸–æƒ…æœªäº† ä»Šç”Ÿç»­å‰ç¼˜</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245201.md#1">ã€é©¬å…‹æ—¶ç©ºã€‘æ¾³æ´²æ”¹ä¹°ç¾Žæ ¸æ½œè‰‡ ç»´å‰å°¼äºšçº§æ ¸æ½œè‰‡æœ‰å¤šç‰›</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13244249.md#1">ã€æ¨ªæ²³è§‚ç‚¹ã€‘ä¸–ç•Œä¸ºä½•å¯¹ä¸­å…±ç§»æ¤é»‘å¹•æ²‰é»˜ï¼Ÿ</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13243637.md#1">ã€åå­—è·¯å£ã€‘åŒ—äº¬å†…ä¹±åŠ é€Ÿ ç¾Žè‹±æ¾³è”ç›Ÿå››å¤§è¶‹åŠ¿</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13242870.md#1">æ¶ˆæ¯ï¼šæŽå˜‰è¯šå†æ¬¡å‡ºå”®å¤§é™†åœ°äº§é¡¹ç›®</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/17/n13240636.md#1">ä¸­å…±ä½•ä»¥ä»¤ä¸€ä½ç²¾è‹±äººå£«æµäº¡ç¾Žå›½ï¼ˆ1ï¼‰</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13242696.md#1">ç ”ç©¶ï¼šé™ä½Žè›‹ç™½è´¨å‡ºé”™æœ‰åŠ©å»¶é•¿å¯¿å‘½</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/16/n13239594.md#1">å‘¨æ˜Ÿé©°ä¸ºä½•ä¸å†æ¼”æˆï¼Ÿå¾å³¥çŽ‹æ™¶æžèƒŒåŽåŽŸå› </a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/16/n13239828.md#1">å¼ å“²ç€šäº‹ä»¶åŽ æœ±ä¸€é¾™äº¦å› æ—§ç…§é­å°ç²‰çº¢ç‹‚è½°</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/17/n13242350.md#1">èŒƒå†°å†°40å²ç”Ÿæ—¥ ç½•è§æ™’ä¸Žå®¶äººåˆç…§</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/17/n13242592.md#1">æ¨ç´«ç¼æ™’ã€Šå°šæ°”ã€‹èŠ±çµ®ç…§ å¤§èµžæ¢æœä¼Ÿå’Œå…ƒåŽ</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/17/n13241083.md#1">é¾™åŠ­åŽçµå ‚å¼€æ”¾äº²å‹åŠå” 9æœˆ22æ—¥åŠžå‘Šåˆ«å¼</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/17/n13242154.md#1">ç»´ç”Ÿç´ Dæœ‰4å¤§æŠ—ç™ŒåŠŸæ•ˆ è¡¥Dé˜²ç™Œæ³¨æ„1å…³é”®</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/17/n13240906.md#1">å¤§é™†å¥³å­è—‰ç½‘è·¯æ‘„å½±æœº ç›®å‡»è‹±å›½å°¼æ–¯æ¹–æ°´æ€ª</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/17/n13242435.md#1">ä»¥è‰²åˆ—ï¼šæ‰“ç–«è‹—çªç ´æ„ŸæŸ“é£Žé™© æ˜¯è‡ªç„¶æ„ŸæŸ“13å€</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/17/n13240582.md#1">çˆ±å°”å…°ç”·å­ç¦»èŒ æœ€åŽè–ªèµ„ç«Ÿæ˜¯30å…¬æ–¤é‡ç¡¬å¸</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13244539.md#1">å·¨åž‹çŸ³æ–‘é±¼ä¸€å£å’¬ä¸‹é²¨é±¼ ç¾Žå›½èˆ¹é•¿çœ‹å‚»çœ¼</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/vuwsmg331/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/vuwsmg331/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/12/18/n11729704.htm">å®‰ä¹æ­»åœ¨è¥¿æ¾³åˆæ³•åŒ–</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/vuwsmg331/djy/blob/master/gb/19/12/18/n11729704.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/vuwsmg331/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/vuwsmg331/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/st1.jpg" title="å…³æ³¨ä¸‰äº¿äººä¸‰é€€"  alt="å…³æ³¨ä¸‰äº¿äººä¸‰é€€"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/sj1.jpg" title="ä¸‰ç™¾å¤šä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="ä¸‰ç™¾å¤šä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/vuwsmg331/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
