--- a/gb/20/2/20/n11882302.md
+++ b/gb/20/2/20/n11882302.md
@@ -1,53 +1,62 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/czicxj2368/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/czicxj2368/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/czicxj2368/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/czicxj2368/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/czicxj2368/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/czicxj2368/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/czicxj2368/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/czicxj2368/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/czicxj2368/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/czicxj2368/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/czicxj2368/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/czicxj2368/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/czicxj2368/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/czicxj2368/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/czicxj2368/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/czicxj2368/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/czicxj2368/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/czicxj2368/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/czicxj2368/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/czicxj2368/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/czicxj2368/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/czicxj2368/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/czicxj2368/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/czicxj2368/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/czicxj2368/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/czicxj2368/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/czicxj2368/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/czicxj2368/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/czicxj2368/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/czicxj2368/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/czicxj2368/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/czicxj2368/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/czicxj2368/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/czicxj2368/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/czicxj2368/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/czicxj2368/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/czicxj2368/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/czicxj2368/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/czicxj2368/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/czicxj2368/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/czicxj2368/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/czicxj2368/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/czicxj2368/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/czicxj2368/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/czicxj2368/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/czicxj2368/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/vuwsmg331/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/vuwsmg331/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/vuwsmg331/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/vuwsmg331/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>公司副总裁全家观神韵 赞精彩非凡意义深刻</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/02/2002192324552124-600x400.jpg" />
-<h6></h6>
+<h6>2020年2月19日，公司副总裁Rusty Procopio 携太太Ashley Procopio和两个女儿一起观赏了神韵环球艺术团在费城玛丽安剧院的第八场演出。（肖捷／大纪元）
+</h6>
 <hr>
-	<p>【大纪元2020年02月20日讯】（大纪元记者肖捷美国费城报导）2月19日，公司副总裁Rusty Procopio携太太Ashley Procopio和两个女儿一起观赏了<a href="https://github.com/czicxj2368/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>环球艺术团在<a href="https://github.com/czicxj2368/djy/blob/master/gb/tag/%E8%B4%B9%E5%9F%8E%E7%8E%9B%E4%B8%BD%E5%AE%89%E5%89%A7%E9%99%A2.md">费城玛丽安剧院</a>（Philadelphia Merriam Theater）的第八场演出，Procopio赞叹：“演出精彩非凡，意义深刻。”</p>
-<p>Procopio早就耳目<a href="https://github.com/czicxj2368/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>的盛名，如今有幸和家人一起观赏演出，他感到非常开心。Procopio是全球采购和库存管理行业领导公司Specialty Resources的副总裁。 该公司与6百多家国内外供应商合作，为客户提供特种精密零件。</p>
-<p>神韵艺术团的宗旨是复兴<a href="https://github.com/czicxj2368/djy/blob/master/gb/tag/%E4%B8%AD%E5%8D%8E%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md">中华传统文化</a>，Procopio对此极为赞赏，“我认为这是一件好事情，观看演出孩子们了解了另外的文化，我想这是她们了解传统中国的最有效的方法。”</p>
-<p>神韵乐团<a href="https://github.com/czicxj2368/djy/blob/master/gb/tag/%E4%B8%AD%E8%A5%BF%E6%96%B9%E4%B9%90%E5%99%A8%E5%90%88%E7%92%A7.md">中西方乐器合璧</a>，演奏出的音乐既恢弘大气又婉转细腻，Procopio陶醉其中，“是的，音乐非常传统，我很喜欢神韵音乐。”</p>
+	<p>【大纪元2020年02月20日讯】（大纪元记者肖捷美国费城报导）2月19日，公司副总裁Rusty Procopio携太太Ashley Procopio和两个女儿一起观赏了<ahref="https://github.com/vuwsmg331/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>环球艺术团在<ahref="https://github.com/vuwsmg331/djy/blob/master/gb/tag/%E8%B4%B9%E5%9F%8E%E7%8E%9B%E4%B8%BD%E5%AE%89%E5%89%A7%E9%99%A2.md#1">费城玛丽安剧院</a>（Philadelphia Merriam Theater）的第八场演出，Procopio赞叹：“演出精彩非凡，意义深刻。”</p>
+<p>Procopio早就耳目<ahref="https://github.com/vuwsmg331/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>的盛名，如今有幸和家人一起观赏演出，他感到非常开心。Procopio是全球采购和库存管理行业领导公司Specialty Resources的副总裁。 该公司与6百多家国内外供应商合作，为客户提供特种精密零件。</p>
+<p>神韵艺术团的宗旨是复兴<ahref="https://github.com/vuwsmg331/djy/blob/master/gb/tag/%E4%B8%AD%E5%8D%8E%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">中华传统文化</a>，Procopio对此极为赞赏，“我认为这是一件好事情，观看演出孩子们了解了另外的文化，我想这是她们了解传统中国的最有效的方法。”</p>
+<p>神韵乐团<ahref="https://github.com/vuwsmg331/djy/blob/master/gb/tag/%E4%B8%AD%E8%A5%BF%E6%96%B9%E4%B9%90%E5%99%A8%E5%90%88%E7%92%A7.md#1">中西方乐器合璧</a>，演奏出的音乐既恢弘大气又婉转细腻，Procopio陶醉其中，“是的，音乐非常传统，我很喜欢神韵音乐。”</p>
 <p>神韵舞剧通过舞蹈讲述故事，从而传递忠、孝、宽容、忍让等中华传统价值理念，Procopio被深深吸引，“我觉得太棒了，演出非常精彩。能看到不同的文化，真是一件美妙的事情。”</p>
-<p>“中国是一个非常有趣味的国家。”<a href="https://github.com/czicxj2368/djy/blob/master/gb/tag/%E4%B8%AD%E5%8D%8E%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md">中华传统文化</a>的博大精深令Procopio叹服。得知神韵不能回中国大陆演出，Procopio感到非常不可思议，“这真是值得深思的事情。”</p>
+<p>“中国是一个非常有趣味的国家。”<ahref="https://github.com/vuwsmg331/djy/blob/master/gb/tag/%E4%B8%AD%E5%8D%8E%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">中华传统文化</a>的博大精深令Procopio叹服。得知神韵不能回中国大陆演出，Procopio感到非常不可思议，“这真是值得深思的事情。”</p>
 <p>Procopio的太太Ashley是一名小学教师。神韵集舞蹈、音乐、服饰和高科技动态天幕为一体，为观众带来了完美的艺术盛宴，Ashley对此赞叹不已，“演出非常精彩，我非常喜欢。”</p>
 <p>动作高难、技巧丰富的中国古典舞，具有超强的表现力，Ashley惊叹于艺术家的精湛技艺，“我喜欢神韵舞蹈，非常非常棒。”</p>
 <p>责任编辑：李凯西</p>
 	
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/2/20/n11882302.htm">公司副总裁全家观神韵 赞精彩非凡意义深刻</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798917.htm">武汉肺炎无法排除人传人 美国务院警告防疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798666.htm">武汉新冠状病毒再增死亡病例 网民冒险爆料</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798091.htm">日本现首例武汉肺炎 机场加强防疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11796789.htm">港卫生防护中心：武汉肺炎一患者 未涉足街市 疑人传人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/15/n11795520.htm">新型冠状病毒 近距离接触恐人传人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/15/n11793955.htm">武汉肺炎疑现人传人 夫妻先后发病</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801312.htm">【更新】肺炎扩散30国和地区 武汉死亡率高</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879294.htm">疫情问题川普为啥总说习好话？白宫官员解释</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11878995.htm">【拍案惊奇】红会囤口罩 疫区粮食供应亮黄灯</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879640.htm">中共军方疫情感染严重 海军舰长也被隔离</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869946.htm">大疫下解救有道 历史启示带您闯过武汉肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11861529.htm">瘟疫来势汹汹 却绕开了这些人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/4/n11843396.htm">宋仁宗怎样护卫子民走出瘟疫灾难？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869721.htm">【历史上的瘟疫】瘟疫中走向衰亡的古罗马帝国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11876712.htm">【翻墙必看】分析：中南海内斗正全面失控</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/17/n11875760.htm">【四维健康】武汉肺炎病人突然倒地死亡 原因为何？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11878995.htm">【拍案惊奇】红会囤口罩 疫区粮食供应亮黄灯</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878288.htm">【新闻看点】封城封区封声 习掀“人民战争”？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11881049.htm">【新闻看点】疫情严峻3方甩锅 川普为习说好话</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/16/n11873581.htm">疫情下横店片场复工 赵丽颖杨幂的粉丝齐抗议</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/17/n11874966.htm">台女主播深夜下班被跟车 机警开往派出所</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878722.htm">钟楚红庆六十岁生日 无惧疫情照常聚餐</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11880584.htm">刘真惊传住院 夫辛龙只称：做健康检查</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/20/2/19/n11879651.md#1">神韵舞蹈音乐完美配合 分析师感受满满能量</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/20/2/19/n11879683.md#1">神韵复兴中华传统 佛州主流精英倾心赞佩</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/20/2/19/n11879799.md#1">神韵之美深触心灵 俄城观众感动落泪</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/20/2/19/n11880312.md#1">艺术人士观神韵心感谦卑 “如高中生在学习”</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/20/2/19/n11880466.md#1">公司老板观神韵 “创世主来临 人类有希望”</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/20/2/19/n11880491.md#1">财务总监赞佩神韵 “看到更美好的世界”</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/czicxj2368/djy/blob/master/gb/20/2/20/n11882302.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/czicxj2368/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/czicxj2368/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/czicxj2368/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/czicxj2368/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/czicxj2368/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/czicxj2368/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/czicxj2368/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/czicxj2368/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/czicxj2368/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/czicxj2368/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/czicxj2368/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/czicxj2368/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/czicxj2368/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/czicxj2368/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/czicxj2368/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/czicxj2368/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/czicxj2368/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/czicxj2368/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/czicxj2368/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/czicxj2368/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/czicxj2368/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/czicxj2368/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/czicxj2368/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/czicxj2368/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/czicxj2368/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/czicxj2368/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/czicxj2368/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/czicxj2368/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/czicxj2368/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/czicxj2368/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/czicxj2368/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/czicxj2368/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/czicxj2368/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/czicxj2368/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/czicxj2368/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/czicxj2368/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/czicxj2368/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/czicxj2368/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/czicxj2368/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/czicxj2368/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/czicxj2368/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/czicxj2368/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/czicxj2368/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/czicxj2368/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/czicxj2368/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/czicxj2368/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/czicxj2368/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/czicxj2368/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/30/n11290434.md#1" target="_blank">【征文】爱德华：金门战役共军惨败之迷</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/8/n10127794.md#1" target="_blank">豪门女总裁的私人生活</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/2/n13205792.md#1">【未解之谜】 不懂中文 会唱中文歌 邓丽君归来？</a></li>
+<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/7/23/n13108846.md#1">【命理】清朝时风水征验人宅吉凶的一些事</a></li>
+<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/3/n13208894.md#1">【未解之谜】预言新解 激光雷达揭秘玛雅世界</a></li>
+<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/3/n13208933.md#1">北洋女学教授转生三世容貌相同 写书讲果报</a></li>
+<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/8/26/n13188418.md#1">古籍记载：瘟疫出现之前 疫鬼做标记</a></li>
+<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13220351.md#1">【秦鹏直播】武汉病毒所被曝曾改造蝙蝠病毒</a></li>
+<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13220267.md#1">【有冇搞错】阿富汗自古就产恐怖主义</a></li>
+<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/9/n13220621.md#1">移美港人：目睹香港法治崩坏 不适合小孩成长</a></li>
+<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13216420.md#1">赵薇再遭官媒点名 20年资本布局曝光</a></li>
+<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13217017.md#1">【拍案惊奇】赵薇卷入习江斗？传李嘉诚公子或出事</a></li>
+<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13217379.md#1">美军绝密无人机疑现身南海 为何无可匹敌</a></li>
+<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13217860.md#1">回顾赵薇当年有多红 网友挖出孙俪曾给她伴舞</a></li>
+<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13218036.md#1">被指来自天王嫂训练营 郭富城妻哽咽首谈内情</a></li>
+<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13219236.md#1">台网红486账号遭停权 脸书回应：涉及仇恨言论</a></li>
+<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13220155.md#1">黄秋生自曝已抵台隔离 三个字评铁皮屋获大赞</a></li>
+<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13215985.md#1">因台独言论遭FB禁言 台网红怒：文革蔓延到台湾</a></li>
+<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13216262.md#1">空姐考考你：飞机上禁烟 为何设有烟灰缸？</a></li>
+<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13218742.md#1">获救孤儿小象回野外 多年后带小孩去看恩人</a></li>
+<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13217337.md#1">台爆幼儿园群聚感染 3类儿童新冠重症风险高</a></li>
+<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13216037.md#1">澳洲琴鸟模仿婴儿哭声 如原音重现</a></li>
+<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/4/n13210459.md#1">古人怎么洁牙护齿？牙刷是怎么来的？</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/vuwsmg331/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/vuwsmg331/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/20/n11882302.htm">公司副总裁全家观神韵 赞精彩非凡意义深刻</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/vuwsmg331/djy/blob/master/gb/20/2/20/n11882302.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/vuwsmg331/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/vuwsmg331/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/vuwsmg331/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
